force-app/main/default/objects/Sprint__c/Sprint__c.object-meta.xml
<CustomObject>
    <description>Used to Breakdown projects into Weekly/Monthly deliverables</description>
    <label>Project</label>
    <nameField>
        <label>Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Projects</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>