force-app/main/default/objects/Sprint__c/fields/Accountlu__c.field-meta.xml
<CustomField>
    <fullName>Accountlu__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account (Lookup)</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Projects_NEW</relationshipName>
    <type>Lookup</type>
</CustomField>