force-app/main/default/objects/Sprint__c/fields/cc_Renewal_Notes__c.field-meta.xml
<CustomField>
    <fullName>cc_Renewal_Notes__c</fullName>
    <label>Renewal Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>