force-app/main/default/objects/Sprint__c/fields/chris_Logged_Time_This_Week__c.field-meta.xml
<CustomField>
    <fullName>chris_Logged_Time_This_Week__c</fullName>
    <description>for tracking planned vs actual workload, to work on tightening business processes.  see chris or ryan for questions</description>
    <inlineHelpText>Sum of time logged with logged date = this week.  Each Sunday this is reset to 0 by a flow.</inlineHelpText>
    <label>Hours Logged This Week</label>
    <summarizedField>Time_Log__c.Hours_Logged__c</summarizedField>
    <summaryFilterItems>
        <field>Time_Log__c.chris_Logged_this_Week_flow__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Time_Log__c.Sprint__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>