force-app/main/default/objects/Sprint__c/fields/chris_Logged_v_Pace_Gap__c.field-meta.xml
<CustomField>
    <fullName>chris_Logged_v_Pace_Gap__c</fullName>
    <formula>Weekly_Pace_Estimate__c -  chris_Logged_Time_This_Week__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Weekly Retained minus Time Logged This Week as a decimal number.</inlineHelpText>
    <label>Logged v Pace Gap (weekly)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>