force-app/main/default/objects/Sprint__c/fields/chris_Logged_wk_calc__c.field-meta.xml
<CustomField>
    <fullName>chris_Logged_wk_calc__c</fullName>
    <formula>Logged_Hours__c / (

  (today()+1 - if(isblank(Project_Start_Date__c), datevalue(CreatedDate) ,  Project_Start_Date__c ))/7
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Logged/wk calc.</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>