force-app/main/default/objects/Sprint__c/fields/chris_P_Name__c.field-meta.xml
<CustomField>
    <fullName>chris_P_Name__c</fullName>
    <formula>left( Name , 8)</formula>
    <inlineHelpText>Project&apos;s shortened name for dashboard ease of use.</inlineHelpText>
    <label>P. Name</label>
    <type>Text</type>
</CustomField>