force-app/main/default/objects/Sprint__c/fields/chris_Pace_to_Close_Evenly_proj__c.field-meta.xml
<CustomField>
    <fullName>chris_Pace_to_Close_Evenly_proj__c</fullName>
    <formula>( Contracted_Hours_Sprint__c +  Hours_Rolled_Over__c -  Logged_Hours__c )/
 (
  if( ( Project_End_Date__c - today() ) /7 &lt; 1, 1,
  ( Project_End_Date__c - today() ) /7 )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Required logged hours/week to complete all hours within the exact contract period.  Does not include weekend days in the calculation.</inlineHelpText>
    <label>Pace to Close Evenly</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>