force-app/main/default/objects/Sprint__c/fields/chris_Project_Category__c.field-meta.xml
<CustomField>
    <fullName>chris_Project_Category__c</fullName>
    <inlineHelpText>Category must at least include &quot;Normal&quot; to generate AAA plan records.  This means it will not source &quot;template&quot; projects, etc.</inlineHelpText>
    <label>Project Category</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Normal</fullName>
                <default>true</default>
                <label>Normal</label>
            </value>
            <value>
                <fullName>Fixed Scope</fullName>
            </value>
            <value>
                <fullName>Retainer</fullName>
            </value>
            <value>
                <fullName>PBO-Internal</fullName>
            </value>
            <value>
                <fullName>Template</fullName>
            </value>
            <value>
                <fullName>Non-Reportable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>