force-app/main/default/objects/Sprint__c/fields/Client_Stakeholder__c.field-meta.xml
<CustomField>
    <fullName>Client_Stakeholder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client Stakeholder</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Projects</relationshipName>
    <type>Lookup</type>
</CustomField>