force-app/main/default/objects/Sprint__c/fields/CloudCrest_Assignee__c.field-meta.xml
<CustomField>
    <fullName>CloudCrest_Assignee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CloudCrest Assignee</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Projects_NEW</relationshipName>
    <type>Lookup</type>
</CustomField>