force-app/main/default/objects/Sprint__c/fields/Completed_Delta_Sprint__c.field-meta.xml
<CustomField>
    <fullName>Completed_Delta_Sprint__c</fullName>
    <formula>Contracted_Hours_Sprint__c -   Hours_Delivered__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remaining Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>