force-app/main/default/objects/Sprint__c/fields/Contract_Completion_Sprint__c.field-meta.xml
<CustomField>
    <fullName>Contract_Completion_Sprint__c</fullName>
    <formula>Hours_Delivered__c  / Contracted_Hours_Sprint__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Completion %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>