force-app/main/default/objects/Sprint__c/fields/Contracted_Hours_Sprint__c.field-meta.xml
<CustomField>
    <fullName>Contracted_Hours_Sprint__c</fullName>
    <formula>Opportunity__r.Contracted_Hours__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contracted Hours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>