force-app/main/default/objects/Sprint__c/fields/Date_Completion_Sprint__c.field-meta.xml
<CustomField>
    <fullName>Date_Completion_Sprint__c</fullName>
    <formula>IF(
    TODAY() &lt;= Project_Start_Date__c,
    0,
    IF(
        TODAY() &gt;= Project_End_Date__c,
        1,
        (TODAY() - Project_Start_Date__c) / (Project_End_Date__c - Project_Start_Date__c)
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date Completion %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>