force-app/main/default/objects/Sprint__c/fields/Days_Since_Start_Date_Sprint__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_Start_Date_Sprint__c</fullName>
    <formula>TODAY() -  Project_Start_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Since Start Date</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>