force-app/main/default/objects/Sprint__c/fields/Est_Project_End_Date_Sprint__c.field-meta.xml
<CustomField>
    <fullName>Est_Project_End_Date_Sprint__c</fullName>
    <formula>Opportunity__r.Est_Project_End_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Est. Project End Date</label>
    <type>Date</type>
</CustomField>