force-app/main/default/objects/Sprint__c/fields/Est_Project_Start_Date_Sprint__c.field-meta.xml
<CustomField>
    <fullName>Est_Project_Start_Date_Sprint__c</fullName>
    <formula>if( isblank(  Project_Start_Date__c ), Opportunity__r.Est_Project_Start_Date__c , Project_Start_Date__c )</formula>
    <label>Est. Project Start Date</label>
    <type>Date</type>
</CustomField>