force-app/main/default/objects/Sprint__c/fields/Expected_Hours_by_Today__c.field-meta.xml
<CustomField>
    <fullName>Expected_Hours_by_Today__c</fullName>
    <formula>Contracted_Hours_Sprint__c  *  Date_Completion_Sprint__c</formula>
    <label>Expected Hours by Today</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>