force-app/main/default/objects/Sprint__c/fields/Full_Implementation__c.field-meta.xml
<CustomField>
    <fullName>Full_Implementation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Full Implementation</label>
    <type>Checkbox</type>
</CustomField>