force-app/main/default/objects/Sprint__c/fields/Go_Live_Date_If_Applicable__c.field-meta.xml
<CustomField>
    <fullName>Go_Live_Date_If_Applicable__c</fullName>
    <label>Go Live Date (If Applicable)</label>
    <type>Date</type>
</CustomField>