force-app/main/default/objects/Sprint__c/fields/Hours_Delivered__c.field-meta.xml
<CustomField>
    <fullName>Hours_Delivered__c</fullName>
    <label>Hours Delivered</label>
    <summarizedField>Sprint_Items__c.Time_Logged_on_Stories_in_Epic__c</summarizedField>
    <summaryForeignKey>Sprint_Items__c.Projects_new__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>