force-app/main/default/objects/Sprint__c/fields/Hours_Logged_Last_Week__c.field-meta.xml
<CustomField>
    <fullName>Hours_Logged_Last_Week__c</fullName>
    <label>Hours Logged Last Week</label>
    <summarizedField>Time_Log__c.Hours_Logged__c</summarizedField>
    <summaryFilterItems>
        <field>Time_Log__c.Logged_Last_Week__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Time_Log__c.Sprint__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>