force-app/main/default/objects/Sprint__c/fields/Hours_Rolled_Over__c.field-meta.xml
<CustomField>
    <fullName>Hours_Rolled_Over__c</fullName>
    <label>Hours Rolled Over</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>