force-app/main/default/objects/Sprint__c/fields/Hours_to_On_Pace__c.field-meta.xml
<CustomField>
    <fullName>Hours_to_On_Pace__c</fullName>
    <formula>IF(
  OR(
    ISBLANK(Expected_Hours_by_Today__c),
    ISBLANK(Hours_Delivered__c)
  ),
  NULL,
  IF(
    (Expected_Hours_by_Today__c / 1.10) - Hours_Delivered__c &lt;= 0,
    0,
    (Expected_Hours_by_Today__c / 1.10) - Hours_Delivered__c
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hours to &apos;On Pace&apos;</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>