force-app/main/default/objects/Sprint__c/fields/Latest_Fathom_Notes__c.field-meta.xml
<CustomField>
    <fullName>Latest_Fathom_Notes__c</fullName>
    <label>Latest Fathom Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>