force-app/main/default/objects/Sprint__c/fields/Logged_Hours__c.field-meta.xml
<CustomField>
    <fullName>Logged_Hours__c</fullName>
    <label>Logged Hours</label>
    <summarizedField>Time_Log__c.Hours_Logged__c</summarizedField>
    <summaryForeignKey>Time_Log__c.Sprint__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>