force-app/main/default/objects/Sprint__c/fields/Meeting_Time__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Time__c</fullName>
    <label>Meeting Time</label>
    <type>Time</type>
</CustomField>