force-app/main/default/objects/Sprint__c/fields/Next_Steering_Committee_Call__c.field-meta.xml
<CustomField>
    <fullName>Next_Steering_Committee_Call__c</fullName>
    <label>Next Steering Committee Call</label>
    <type>Date</type>
</CustomField>