force-app/main/default/objects/Sprint__c/fields/Next_Steps_From_Last_Call__c.field-meta.xml
<CustomField>
    <fullName>Next_Steps_From_Last_Call__c</fullName>
    <label>Next Steps From Last Call</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>