force-app/main/default/objects/Sprint__c/fields/of_Days_Left_Sprint__c.field-meta.xml
<CustomField>
    <fullName>of_Days_Left_Sprint__c</fullName>
    <formula>IF(
Est_Project_End_Date_Sprint__c &gt;= TODAY(),
Est_Project_End_Date_Sprint__c - TODAY(),
0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label># of Days Left</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>