force-app/main/default/objects/Sprint__c/fields/On_Time_Hours_Per_Day__c.field-meta.xml
<CustomField>
    <fullName>On_Time_Hours_Per_Day__c</fullName>
    <formula>Completed_Delta_Sprint__c / Remaining_Working_Days__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>On Time Hours Per Day</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>