force-app/main/default/objects/Sprint__c/fields/On_Time_Weekly_Pace__c.field-meta.xml
<CustomField>
    <fullName>On_Time_Weekly_Pace__c</fullName>
    <formula>IF(
  Remaining_Weeks__c &lt;= 0,
  Completed_Delta_Sprint__c,
  MIN(
    Completed_Delta_Sprint__c,
    Completed_Delta_Sprint__c / Remaining_Weeks__c
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>On Time Weekly Pace</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>