force-app/main/default/objects/Sprint__c/fields/Org_URL__c.field-meta.xml
<CustomField>
    <fullName>Org_URL__c</fullName>
    <label>Org URL</label>
    <type>Url</type>
</CustomField>