force-app/main/default/objects/Sprint__c/fields/Pace_Ratio__c.field-meta.xml
<CustomField>
    <fullName>Pace_Ratio__c</fullName>
    <description>≈ 1.0 → on track

1.1 → delivering faster than timeline

&lt; 0.9 → falling behind</description>
    <formula>Date_Completion_Sprint__c  /  Contract_Completion_Sprint__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pace Ratio</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>