force-app/main/default/objects/Sprint__c/fields/Pace_Status__c.field-meta.xml
<CustomField>
    <fullName>Pace_Status__c</fullName>
    <formula>IF(
  ISBLANK(Pace_Ratio__c),
  &quot;—&quot;,
  IF(
    Pace_Ratio__c &lt;= 0.90,
    &quot;🚀 Ahead of Pace 🚀&quot;,
    IF(
      Pace_Ratio__c &lt;= 1.10,
      &quot;✅ On Pace ✅&quot;,
      IF(
        Pace_Ratio__c &lt;= 2,
        &quot;⚠️ Behind Pace ⚠️&quot;,
        &quot;🚨 Houston, We Have A Problem 🚨&quot;
      )
    )
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pace Status</label>
    <type>Text</type>
</CustomField>