force-app/main/default/objects/Sprint__c/fields/Production_URL__c.field-meta.xml
<CustomField>
    <fullName>Production_URL__c</fullName>
    <formula>Hyperlink( Opportunity__r.Account.Org_URL__c , &quot;Open Production&quot;, &quot;_blank&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Production URL</label>
    <type>Text</type>
</CustomField>