force-app/main/default/objects/Sprint__c/fields/Project_Debrief__c.field-meta.xml
<CustomField>
    <fullName>Project_Debrief__c</fullName>
    <inlineHelpText>When completing a project, this box should be used to record lessons learned and tips for the next one.</inlineHelpText>
    <label>Project Debrief</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>