force-app/main/default/objects/Sprint__c/fields/Project_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Project_End_Date__c</fullName>
    <label>Project End Date</label>
    <type>Date</type>
</CustomField>