force-app/main/default/objects/Sprint__c/fields/Project_Lead_Sprint__c.field-meta.xml
<CustomField>
    <fullName>Project_Lead_Sprint__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Projects1</relationshipName>
    <type>Lookup</type>
</CustomField>