force-app/main/default/objects/Sprint__c/fields/Project_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Project_Start_Date__c</fullName>
    <label>Project Start Date</label>
    <type>Date</type>
</CustomField>