force-app/main/default/objects/Sprint__c/fields/Remaining_Weeks__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Weeks__c</fullName>
    <formula>IF( Project_End_Date__c &lt;= TODAY(), 0, (Project_End_Date__c - TODAY()) / 7 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remaining Weeks</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>