force-app/main/default/objects/Sprint__c/fields/Remaining_Working_Days__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Working_Days__c</fullName>
    <description>remaining working days M-F left on the project.</description>
    <formula>IF(
  Project_End_Date__c &lt;= TODAY(),
  0,
  (
    (
      CASE(
        WEEKDAY(Project_End_Date__c),
        1, Project_End_Date__c - 2,
        7, Project_End_Date__c - 1,
        Project_End_Date__c
      )
      - TODAY()
      + 1
    )
    - (
      2 * FLOOR(
        (
          CASE(
            WEEKDAY(Project_End_Date__c),
            1, Project_End_Date__c - 2,
            7, Project_End_Date__c - 1,
            Project_End_Date__c
          )
          - TODAY()
          + WEEKDAY(TODAY())
        ) / 7
      )
    )
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remaining Working Days</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>