force-app/main/default/objects/Sprint__c/fields/Sandbox_URL_Button__c.field-meta.xml
<CustomField>
    <fullName>Sandbox_URL_Button__c</fullName>
    <formula>Hyperlink(Opportunity__r.Account.Sandbox_URL__c, &quot;Open Sandbox&quot;, &quot;_blank&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sandbox URL</label>
    <type>Text</type>
</CustomField>