force-app/main/default/objects/Sprint__c/fields/Scoped__c.field-meta.xml
<CustomField>
    <fullName>Scoped__c</fullName>
    <formula>Sum_of_Estimated_Hours__c / Opportunity__r.Contracted_Hours__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Scoped %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>