force-app/main/default/objects/Sprint__c/fields/Scoped_Delta__c.field-meta.xml
<CustomField>
    <fullName>Scoped_Delta__c</fullName>
    <description>Contract Hours - Estimated Hours</description>
    <formula>Opportunity__r.Contracted_Hours__c - Sum_of_Estimated_Hours__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Contract Hours - Estimated Hours</inlineHelpText>
    <label>Scoped Delta</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>