force-app/main/default/objects/Sprint__c/fields/Share_with_Whitelabel__c.field-meta.xml
<CustomField>
    <fullName>Share_with_Whitelabel__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Share with Whitelabel</label>
    <type>Checkbox</type>
</CustomField>