force-app/main/default/objects/Sprint__c/fields/Sum_of_Estimated_Hours__c.field-meta.xml
<CustomField>
    <fullName>Sum_of_Estimated_Hours__c</fullName>
    <label>Sum of Estimated Hours</label>
    <summarizedField>Sprint_Items__c.Hours_Estimate__c</summarizedField>
    <summaryFilterItems>
        <field>Sprint_Items__c.Status__c</field>
        <operation>notEqual</operation>
        <value>Blocked, Complete, On Hold, Cancelled</value>
    </summaryFilterItems>
    <summaryForeignKey>Sprint_Items__c.Projects_new__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>