force-app/main/default/objects/Sprint__c/fields/Sum_of_Estimated_Remaining_Time__c.field-meta.xml
<CustomField>
    <fullName>Sum_of_Estimated_Remaining_Time__c</fullName>
    <label>Sum of Estimated Remaining Time</label>
    <summarizedField>Sprint_Items__c.Estimated_Remaining_Time__c</summarizedField>
    <summaryFilterItems>
        <field>Sprint_Items__c.Status__c</field>
        <operation>equals</operation>
        <value>Blocked, Not Started, In Progress, Need Input from Customer, Final Approval</value>
    </summaryFilterItems>
    <summaryForeignKey>Sprint_Items__c.Projects_new__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>