force-app/main/default/objects/Sprint__c/fields/Support_Lead__c.field-meta.xml
<CustomField>
    <fullName>Support_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Support Lead</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Projects2</relationshipName>
    <type>Lookup</type>
</CustomField>