force-app/main/default/objects/Sprint__c/fields/Support_Split__c.field-meta.xml
<CustomField>
    <fullName>Support_Split__c</fullName>
    <label>Support Split %</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>