force-app/main/default/objects/Sprint__c/fields/Weekly_Pace_Estimate__c.field-meta.xml
<CustomField>
    <fullName>Weekly_Pace_Estimate__c</fullName>
    <inlineHelpText>*Used to be Weekly Pace Estimate*</inlineHelpText>
    <label>Weekly Retained Hours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>