force-app/main/default/objects/Sprint__c/fields/X1500__c.field-meta.xml
<CustomField>
    <fullName>X1500__c</fullName>
    <label>Project Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>