force-app/main/default/objects/Sprint__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>CREATED_DATE</columns>
    <columns>Account__c</columns>
    <columns>NAME</columns>
    <columns>Contract_Completion_Sprint__c</columns>
    <columns>Contracted_Hours_Sprint__c</columns>
    <columns>Logged_Hours__c</columns>
    <columns>chris_Project_Category__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>