force-app/main/default/objects/Sprint__c/listViews/All_Open_Projects.listView-meta.xml
<ListView>
    <fullName>All_Open_Projects</fullName>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>NAME</columns>
    <columns>Pace_Status__c</columns>
    <columns>Project_End_Date__c</columns>
    <columns>Hours_to_On_Pace__c</columns>
    <columns>On_Time_Hours_Per_Day__c</columns>
    <columns>On_Time_Weekly_Pace__c</columns>
    <columns>Remaining_Weeks__c</columns>
    <columns>Contracted_Hours_Sprint__c</columns>
    <columns>Completed_Delta_Sprint__c</columns>
    <columns>Hours_Delivered__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Completed,On Hold,Cancelled</value>
    </filters>
    <filters>
        <field>NAME</field>
        <operation>notContain</operation>
        <value>PBO</value>
    </filters>
    <label>All Open Projects</label>
</ListView>