force-app/main/default/objects/Sprint__c/listViews/All_Open_Retainers.listView-meta.xml
<ListView>
    <fullName>All_Open_Retainers</fullName>
    <columns>NAME</columns>
    <columns>Accountlu__c</columns>
    <columns>chris_Project_Category__c</columns>
    <columns>Contracted_Hours_Sprint__c</columns>
    <columns>Weekly_Pace_Estimate__c</columns>
    <columns>Logged_Hours__c</columns>
    <columns>Hours_Logged_Last_Week__c</columns>
    <columns>chris_Logged_Time_This_Week__c</columns>
    <columns>chris_Logged_wk_calc__c</columns>
    <columns>Project_Lead_Sprint__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Completed,On Hold,Cancelled</value>
    </filters>
    <filters>
        <field>chris_Project_Category__c</field>
        <operation>includes</operation>
        <value>Normal,Retainer</value>
    </filters>
    <label>All Open Retainers</label>
</ListView>