force-app/main/default/objects/Sprint__c/listViews/My_Projects.listView-meta.xml
<ListView>
    <fullName>My_Projects</fullName>
    <columns>NAME</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>Pace_Status__c</columns>
    <columns>Hours_to_On_Pace__c</columns>
    <columns>On_Time_Hours_Per_Day__c</columns>
    <columns>On_Time_Weekly_Pace__c</columns>
    <columns>Remaining_Weeks__c</columns>
    <columns>Project_End_Date__c</columns>
    <columns>Hours_Delivered__c</columns>
    <columns>Completed_Delta_Sprint__c</columns>
    <columns>Contracted_Hours_Sprint__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Not Started,In Progress</value>
    </filters>
    <label>My Projects</label>
</ListView>