force-app/main/default/objects/Sprint__c/listViews/PBO_Project.listView-meta.xml
<ListView>
    <fullName>PBO_Project</fullName>
    <columns>NAME</columns>
    <columns>chris_Project_Category__c</columns>
    <columns>Project_Lead_Sprint__c</columns>
    <columns>Contracted_Hours_Sprint__c</columns>
    <columns>Weekly_Pace_Estimate__c</columns>
    <columns>Next_Steering_Committee_Call__c</columns>
    <columns>Meeting_Cadence__c</columns>
    <columns>Logged_Hours__c</columns>
    <columns>Date_Completion_Sprint__c</columns>
    <columns>Contract_Completion_Sprint__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Completed,On Hold,Cancelled</value>
    </filters>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>CloudCrest</value>
    </filters>
    <filters>
        <field>NAME</field>
        <operation>notContain</operation>
        <value>Example</value>
    </filters>
    <label>PBO Project</label>
</ListView>